--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<section id="oportunidade" class="descricao">
 		<div class="descricao-borda amarelo">
 			<h1 class="texto-alternativo">Como estou buscando meu propósito e aspiração através dessa oportunidade</h1>
-			<div class="texto-descricao">A oportunidade de estar em uma empresa séria e ter a chance de conviver com profissionais com caracteristicas iguais e diferentes, porém de alta qualidade é algo íncrivel, no fim é o que nos faz ter a motivação para nos tornamos o que somos.</div>
+			<div class="texto-descricao">Penso que seria uma oportunidade incrível, pois através da pratica há a possibilidade de conseguir utilizar os conhecimentos adquiridos para avançar profissionalmente e alcançar os objetivos, além de poder conviver com uma empresa e pessoas com características semelhantes e diferentes.</div>
 		</div>
 	</section>
 
